# AbnormalKPIAnalystAIAgent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/knowledge/: business_rules.md  data_dictionary.md  metric_definitions.md
src/agentic_kpi_analyst/: __init__.py  cli.py  config.py  demo.py  logging_utils.py  models.py  state.py
src/agentic_kpi_analyst/analysis/: charting.py  contribution.py  kpi_analysis.py
src/agentic_kpi_analyst/app/: streamlit_app.py
src/agentic_kpi_analyst/evals/: case_loader.py  graders.py  runner.py
src/agentic_kpi_analyst/graph/: graph.py  nodes.py
src/agentic_kpi_analyst/llm/: __init__.py  base.py  mock_client.py  openai_client.py
src/agentic_kpi_analyst/reports/: renderer.py  templates.py
src/agentic_kpi_analyst/retrieval/: indexer.py  retriever.py
src/agentic_kpi_analyst/warehouse/: connection.py  sql_executor.py  sql_validator.py
tests/: conftest.py  test_analysis.py  test_eval_runner.py  test_graph_smoke.py  test_retrieval.py  test_sql_validator.py
warehouse/: schema.sql  seed_data.py  views.sql
