[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-kpi-analyst"
version = "0.1.0"
description = "Agentic KPI Root-Cause Analyst for E-commerce Operations"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "rank-bm25>=0.2.2",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
]

[project.scripts]
kpi-analyst = "agentic_kpi_analyst.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
